Cabecera realizada por Aura Russill

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <title>Menu Pair Programming</title>
   </head>
   <body>
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-target="#Navbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand mr-auto" href="#"
+          ><img src="img/sofka.jpg" height="30" width="41"
+        /></a>
+        <div class="collapse navbar-collapse" id="Navbar">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"><span></span> Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./aboutus.html"
+                ><span></span> Sobre nostros</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><span></span> Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactus.html"
+                ><span></span> Contacto</a
+              >
+            </li>
+          </ul>
+          <span class="navbar-text">
+            <a id="loginbutton"> <span></span> Login</a>
+          </span>
+        </div>
+      </div>
+    </nav>
     <nav>
       <ul>
         <li><a href="">Inicio</a></li>
